--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "9",
     "fuzzy-comparison": "^2.0.0",
     "minisearch": "^3.1.0",
+    "moment": "^2.29.1",
     "postcss": "7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
